syntax = "proto3";
option java_multiple_files = true;
option csharp_namespace = "proto";
option  go_package = ".;proto";

message RegisterAccountRequest{
  string Email = 1;
  string Name = 2;
  string Password = 3;
}

message RegisterAccountResponse {
  uint64 ID = 1;
}

message AccountCreated{
  uint64 ID = 1;
  string Email = 2;
  string Name = 3;
}

message GetAccountByEmailRequest {
  string Email = 1;
}

message GetAccountByIDRequest {
  uint64 ID = 1;
}

message GetAccountResponse {
  uint64 ID = 1;
  string Email = 2;
  string Name = 3;
}

message ChangePasswordRequest {
  uint64 ID = 1;
  string Current = 2;
  string Future = 3;
}

message PasswordChanged{
  uint64 ID = 1;
  string Current = 2;
  string Future = 3;
}

message AuthenticateRequest{
  string Email = 1;
  string Password = 2;
}

message AuthenticateResponse{
  string Host = 1;
  uint32 Port = 2;
  /*something*/
}

message SendEmailTask{
  string Email = 1;
  string Content = 2;
}
